cleared some private things

--- a/Data/history.txt
+++ b/Data/history.txt
@@ -332,3 +332,19 @@ function UseComputer
 function UseComputer
 ------------------2015年 01月 21日 星期三 13:13:55 CST------------------
 function Here_Name projects
+------------------2015年 01月 23日 星期五 22:57:21 CST------------------
+function -h
+------------------2015年 01月 23日 星期五 22:57:25 CST------------------
+function -i
+------------------2015年 01月 23日 星期五 22:57:37 CST------------------
+function -ins
+------------------2015年 01月 23日 星期五 23:01:01 CST------------------
+function example -edit
+------------------2015年 01月 23日 星期五 23:02:38 CST------------------
+function example -h
+------------------2015年 01月 23日 星期五 23:02:54 CST------------------
+function example -i
+------------------2015年 01月 23日 星期五 23:25:17 CST------------------
+function -add StrFunc
+------------------2015年 01月 23日 星期五 23:27:00 CST------------------
+function -add StrFunc
